syntax = "proto3";
package com.jesse.jnotes.proto;

option java_package = "com.jesse.jnotes.proto";
option java_multiple_files = true;

message NoteContent {
    string                                                                              title  =  1;
    string                                                                               type  =  2;
    repeated NoteBlock                                                                 blocks  =  3;
}

message NoteBlock {
    uint32                                                                                 id  =  1;
    string                                                                            content  =  2;
    string                                                                           rendered  =  3;
    enum block_state {
        NOT_GENERATED                                                                          =  0;
        GENERATED                                                                              =  1;
        FAILED                                                                                 =  2;
        WARNINGS                                                                               =  3;
        OUT_OF_DATE                                                                            =  4;
    }
    block_state                                                                         state  =  4;
}